Fix mouse-over scrollbars on counters in IE.

--- a/public/whenis.css
+++ b/public/whenis.css
@@ -125,7 +125,7 @@ span.countdown-social {
 }
 span.social-link {
     display: none;
-    margin-bottom:3px;
+/*    margin-bottom:3px;*/
 }
 span.countdown-name > a.visited {
     text-decoration: none;
